syntax = "proto3";

package gateway;

option go_package = "github.com/k1tasun/GoEdge-Gateway/api/proto";

import "google/protobuf/timestamp.proto";

service StorageService {
  rpc StoreReading(StoreReadingRequest) returns (StoreReadingResponse);
  rpc StoreBatch(StoreBatchRequest) returns (StoreBatchResponse);
  rpc GetReadings(GetReadingsRequest) returns (GetReadingsResponse);
}

message SensorReading {
  string device_id = 1;
  string type = 2;
  double value = 3;
  google.protobuf.Timestamp timestamp = 4;
  string unit = 5;
}

message GetReadingsRequest {
  string device_id = 1;
  int32 limit = 2;
}

message GetReadingsResponse {
  repeated SensorReading readings = 1;
}

message StoreReadingRequest {
  SensorReading reading = 1;
}

message StoreReadingResponse {
  bool success = 1;
  string message = 2;
}

message StoreBatchRequest {
  repeated SensorReading readings = 1;
}

message StoreBatchResponse {
  int32 count = 1;
  bool success = 2;
}
